added all functions
