# swagger.yaml
@@ -295,7 +295,7 @@ paths:
         '204':
           description: Passenger deleted successfully
 
-  /api/v1/tickets:
+  /api/v1/tickets/:
     get:
       summary: Get a list of tickets
       responses:
@@ -304,7 +304,6 @@ paths:
           content:
             application/json:
               example:
-                - user: "username1"
                   flight:
                     origin_city: "City1"
                     origin_code: "C1"
@@ -332,9 +331,6 @@ paths:
             schema:
               type: object
               properties:
-                user:
-                  type: string
-                  description: "Username of the user"
                 flight_id:
                   type: integer
                   description: "ID of the flight"
@@ -378,7 +374,6 @@ paths:
           content:
             application/json:
               example:
-                user: "username1"
                 flight:
                   origin_city: "City1"
                   origin_code: "C1"
@@ -413,9 +408,6 @@ paths:
             schema:
               type: object
               properties:
-                user:
-                  type: string
-                  description: "Username of the user"
                 flight_id:
                   type: integer
                   description: "ID of the flight"
